Closed
Bug 555198
Opened 15 years ago
Closed 15 years ago
Find bar and all tabs panel are black
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.3a4
People
(Reporter: dao, Assigned: robarnold)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
890 bytes,
patch
|
jimm
:
review+
|
Details | Diff | Splinter Review |
Glass doesn't work for the find bar and the all tabs panel anymore. They are black black instead. Likely a regression from bug 458407.
sorry if wrong place,
on XP, all tabs panel is light gray(white). 20100327 Nightly
(SS) http://img248.imageshack.us/img248/4156/20100327q.jpg
20100301 Nightly, it's dark gray.
(SS) http://img232.imageshack.us/img232/2408/20100301.jpg
changed(intended) ?
Must be one of Rob's patches
| Assignee | ||
Comment 4•15 years ago
|
||
(In reply to comment #0)
> Glass doesn't work for the find bar and the all tabs panel anymore. They are
> black black instead. Likely a regression from bug 458407.
I don't see how the patch in bug 458407 could have affected XP. I think it would have to be bug 450767 somehow.
| Assignee | ||
Comment 5•15 years ago
|
||
Previously we were not updating the glass region of a window if it was not the top level window according to mIsTopWidgetWindow - this is apparantly not set to PR_TRUE for owned popup windows. Now we check if we have a parent (excluding an owner) to determine whether or not to ignore transparent regions.
| Assignee | ||
Comment 6•15 years ago
|
||
I should note that this doesn't fix the find bar issue - that has a separate cause that I think is addressed in one of the many other bugs filed about the glass theme.
on XP, gray to white(light gray) regression range is 2010032204 - 2010032304
bug 464205 was checked in between above range.
+.allTabs-preview-inner > .tabPreview-canvas {
+ background-color: rgb(60%,60%,60%);
+ -moz-box-shadow: 0 0 2px ThreeDShadow;
}
The findbar on Windows 7 and Vista no longer have the glass effect and therefore no longer black. Unless XP still has this bug for some reason then the summary should be updated unless of course there is some underlying bug that needs fixed regardless if glass is applied to the findbar or not.
Comment 10•15 years ago
|
||
Comment on attachment 435513 [details] [diff] [review]
Allow windows with owners to paint
The find bar is glass again with this applied. Although there's another bug here, when I close the find bar, it briefly goes black and then hides. Maybe that's filed someplace else?
Attachment #435513 -
Flags: review?(jmathies) → review+
| Assignee | ||
Comment 11•15 years ago
|
||
(In reply to comment #10)
> (From update of attachment 435513 [details] [diff] [review])
> The find bar is glass again with this applied. Although there's another bug
> here, when I close the find bar, it briefly goes black and then hides. Maybe
> that's filed someplace else?
I could not reproduce this.
Also, pushed to mozilla-central:
http://hg.mozilla.org/mozilla-central/rev/28b6958c2372
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
| Reporter | ||
Updated•15 years ago
|
Target Milestone: --- → mozilla1.9.3a4
Comment 12•15 years ago
|
||
I'm not seeing any 'Glass effect' on the Find-bar.
Tested using cset:
http://hg.mozilla.org/mozilla-central/rev/26be64ca9977
| Assignee | ||
Comment 13•15 years ago
|
||
(In reply to comment #12)
> I'm not seeing any 'Glass effect' on the Find-bar.
I think this is intentional per http://hg.mozilla.org/mozilla-central/rev/0ca03b113e8a
You need to log in
before you can comment on or make changes to this bug.
Description
•