Bug 555198 - Find bar and all tabs panel are black r=jimm